# Android-study

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cariad/astudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cariad/astudy/: BatteryView.kt  FirstFragment.kt  HigherFun.kt  JNILib.kt  MainActivity.kt  ScopeFunc.kt  SecondFragment.kt
app/src/main/java/com/cariad/astudy/bean/: Person.kt
app/src/main/java/com/cariad/astudy/javas/: BleCore.java  ImageFormat.java  JUCT.java  ThreadC.java
app/src/main/java/com/cariad/astudy/kotins/: BLEC.kt  ExtensionsC.kt  NetworkResult.kt  Person.kt
app/src/main/java/com/cariad/astudy/kotlins/: DataTypes.kt
app/src/main/jni/: CMakeLists.txt  image.cpp  native-lib.cpp
app/src/main/jni/stu/: data_stract.c  data_stract.h  frist.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/cariad/astudy/: ExampleUnitTest.kt
code/: main.kt
doc/android-review/: Android-Review.md  Android-进阶.md  Android_default.md  Android_default_out.md  DICOM.md  Framework.md  Math.md  REJON.md  VIVO.md  WT.md  java复习题.md  kotlin.md  md.py  smart.md  硬件交互.md  第三方框架.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
py/: Main.py  QlearningAgent.py  invert_color.tflite  requements.txt
